Closed Bug 962505 Opened 11 years ago Closed 11 years ago

fix display list printing to play nicely with fennec and b2g

Categories

(Core :: Layout, defect)

29 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: tnikkel, Assigned: tnikkel)

Details

Attachments

(2 files)

Attached patch patchSplinter Review
The output for a single fprintf_stderr call ends up on its own line in the logcat output even if there is no newline in the string. So we have to create the the whole and then output it at once. Printing out indentation spaces makes the output somewhat hard to interpret.
Attachment #8363566 - Flags: review?(matspal)
Comment on attachment 8363566 [details] [diff] [review] patch While you're here, please add MOZ_OVERRIDE on the first WriteDebugInfo in layout/base/nsDisplayList.h too. Same comment as before regarding nsAutoCString.
Attachment #8363566 - Flags: review?(matspal) → review+
Putting this in here because it's small and not worth another bug.
Attachment #8364868 - Flags: review?(matspal)
Attachment #8364868 - Flags: review?(matspal) → review+
(In reply to Mats Palmgren (:mats) from comment #1) > Comment on attachment 8363566 [details] [diff] [review] > patch > > While you're here, please add MOZ_OVERRIDE on the first WriteDebugInfo > in layout/base/nsDisplayList.h too. I'm not sure what you mean here, all the WriteDebugInfo have MOZ_OVERRIDE that I can tell, except for the original declaration, which isn't an override. > Same comment as before regarding nsAutoCString. Done.
Sorry, I didn't realize the first one was actually the root.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: