Bug 962505. When dumping display lists print the entire line at once so it works better with Fennec and b2g. r=mats